--- a/GymRegistrator.DataAccess/App.config
+++ b/GymRegistrator.DataAccess/App.config
@@ -7,15 +7,11 @@
           requirePermission="false"/>
     </configSections>
   <connectionStrings>
-    <add name="GymRegistratorDb" connectionString="Data Source=NTB999; Initial Catalog=GymRegistrator;Integrated Security=True"
-      providerName="System.Data.SqlClient"/>
+    <add name="GymRegistratorDb" connectionString="Data Source=NTB999; Initial Catalog=GymRegistrator;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
-    </startup>
-    <entityFramework>
-        <providers>
-            <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
-        </providers>
-    </entityFramework>
+  <entityFramework>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
+    </providers>
+  </entityFramework>
 </configuration>
